Refactored code of the ModelParams to read them from config. Refactored code of image preprocessing for DNN. Working on prostate cancer predictor plugin.

--- a/biocell/src/bsmu/biocell/app/configs/BiocellApp.conf.yaml
+++ b/biocell/src/bsmu/biocell/app/configs/BiocellApp.conf.yaml
@@ -2,9 +2,11 @@ plugins:
   - bsmu.biocell.plugins.main_window.BiocellMainWindowPlugin:
       replace: bsmu.vision.plugins.windows.main.MainWindowPlugin
       alias: main_window
+  - bsmu.biocell.plugins.pc_isup_predictor.BiocellPcIsupPredictorPlugin
 
   - bsmu.vision.plugins.file_dropper.FileDropperPlugin
-  - bsmu.vision.plugins.loaders.image.simple.SimpleImageFileLoaderPlugin
+#  - bsmu.vision.plugins.loaders.image.simple.SimpleImageFileLoaderPlugin
+  - bsmu.vision.plugins.loaders.image.wsi.WholeSlideImageFileLoaderPlugin
 #  - bsmu.vision.plugins.post_load_converters.image_to_layered.ImageToLayeredImagePostLoadConverterPlugin
 #  - bsmu.vision.plugins.visualizers.image.layered.LayeredImageVisualizerPlugin
   - bsmu.vision.plugins.layer_controller.MdiImageViewerLayerControllerPlugin
