--- a/biocell/src/bsmu/biocell/app/configs/BiocellApp.conf.yaml
+++ b/biocell/src/bsmu/biocell/app/configs/BiocellApp.conf.yaml
@@ -5,15 +5,17 @@ plugins:
   - bsmu.biocell.plugins.pc_isup_predictor.BiocellPcIsupPredictorPlugin
 
   - bsmu.vision.plugins.file_dropper.FileDropperPlugin
-#  - bsmu.vision.plugins.loaders.image.simple.SimpleImageFileLoaderPlugin
-  - bsmu.vision.plugins.loaders.image.wsi.WholeSlideImageFileLoaderPlugin
-#  - bsmu.vision.plugins.post_load_converters.image_to_layered.ImageToLayeredImagePostLoadConverterPlugin
-#  - bsmu.vision.plugins.visualizers.image.layered.LayeredImageVisualizerPlugin
+  - bsmu.vision.plugins.loaders.image.simple.SimpleImageFileLoaderPlugin
+#  - bsmu.vision.plugins.loaders.image.wsi.WholeSlideImageFileLoaderPlugin
+
+  - bsmu.vision.plugins.post_load_converters.image_to_layered.ImageToLayeredImagePostLoadConverterPlugin
+  - bsmu.vision.plugins.visualizers.image.layered.LayeredImageVisualizerPlugin
+
   - bsmu.vision.plugins.layer_controller.MdiImageViewerLayerControllerPlugin
   - bsmu.vision.plugins.layers_view.LayersTableViewPlugin
-  - bsmu.vision.plugins.visualizers.image.flat.FlatImageVisualizerPlugin
+#  - bsmu.vision.plugins.visualizers.image.flat.FlatImageVisualizerPlugin
 
-#  - bsmu.vision.plugins.walkers.file.MdiImageLayerFileWalkerPlugin
+  - bsmu.vision.plugins.walkers.file.MdiImageLayerFileWalkerPlugin
 #  - bsmu.vision.plugins.tools.viewer.image.smart_brush.SmartBrushImageViewerToolPlugin
-#  - bsmu.vision.plugins.overlayers.path.ImageViewerPathOverlayerPlugin
+  - bsmu.vision.plugins.overlayers.path.ImageViewerPathOverlayerPlugin
 #  - bsmu.vision.plugins.overlayers.intersection.ImageViewerIntersectionOverlayerPlugin
