--- a/biocell/src/bsmu/biocell/app/configs/BiocellApp.conf.yaml
+++ b/biocell/src/bsmu/biocell/app/configs/BiocellApp.conf.yaml
@@ -2,12 +2,16 @@ plugins:
   - bsmu.biocell.plugins.main_window.BiocellMainWindowPlugin:
       replace: bsmu.vision.plugins.windows.main.MainWindowPlugin
       alias: main_window
-  - bsmu.biocell.plugins.pc_isup_predictor.BiocellPcIsupPredictorPlugin
-  - bsmu.biocell.plugins.pc_gleason_segmenter.BiocellPcGleasonSegmenterPlugin
+#  - bsmu.biocell.plugins.pc_isup_predictor.BiocellPcIsupPredictorPlugin
+#  - bsmu.biocell.plugins.pc_gleason_segmenter.BiocellPcGleasonSegmenterPlugin
+  - bsmu.biocell.plugins.hed_wsi_smart_brush.HedSmartBrushImageViewerToolPlugin
+
+  - bsmu.vision.plugins.overlayers.image.base.ImageViewerOverlayerPlugin
 
   - bsmu.vision.plugins.file_dropper.FileDropperPlugin
-#  - bsmu.vision.plugins.loaders.image.simple.SimpleImageFileLoaderPlugin
   - bsmu.vision.plugins.loaders.image.wsi.WholeSlideImageFileLoaderPlugin
+  - bsmu.vision.plugins.loaders.image.simple.SimpleImageFileLoaderPlugin
+  - bsmu.vision.plugins.writers.image.generic.GenericImageFileWriterPlugin
 
   - bsmu.vision.plugins.post_load_converters.image_to_layered.ImageToLayeredImagePostLoadConverterPlugin
   - bsmu.vision.plugins.visualizers.image.layered.LayeredImageVisualizerPlugin
@@ -16,7 +20,8 @@ plugins:
   - bsmu.vision.plugins.layers_view.LayersTableViewPlugin
   - bsmu.vision.plugins.visualizers.image.flat.FlatImageVisualizerPlugin
 
-  - bsmu.vision.plugins.walkers.file.MdiImageLayerFileWalkerPlugin
+#  - bsmu.vision.plugins.walkers.file.MdiImageLayerFileWalkerPlugin
 #  - bsmu.vision.plugins.tools.viewer.image.smart_brush.SmartBrushImageViewerToolPlugin
+#  - bsmu.vision.plugins.tools.viewer.image.wsi_smart_brush.WsiSmartBrushImageViewerToolPlugin
 #  - bsmu.vision.plugins.overlayers.path.ImageViewerPathOverlayerPlugin
 #  - bsmu.vision.plugins.overlayers.intersection.ImageViewerIntersectionOverlayerPlugin
