--- a/biocell/src/bsmu/biocell/app/configs/BiocellApp.conf.yaml
+++ b/biocell/src/bsmu/biocell/app/configs/BiocellApp.conf.yaml
@@ -3,7 +3,7 @@ plugins:
       replace: bsmu.vision.plugins.windows.main.MainWindowPlugin
       alias: main_window
 #  - bsmu.biocell.plugins.pc_isup_predictor.BiocellPcIsupPredictorPlugin
-#  - bsmu.biocell.plugins.pc_gleason_segmenter.BiocellPcGleasonSegmenterPlugin
+  - bsmu.biocell.plugins.pc_gleason_segmenter.BiocellPcGleasonSegmenterPlugin
   - bsmu.biocell.plugins.hed_wsi_smart_brush.HedSmartBrushImageViewerToolPlugin
   - bsmu.biocell.plugins.kidney_tissue_segmenter.BiocellKidneyTissueSegmenterPlugin
 
@@ -20,6 +20,8 @@ plugins:
   - bsmu.vision.plugins.layer_controller.MdiImageViewerLayerControllerPlugin
   - bsmu.vision.plugins.layers_view.LayersTableViewPlugin
   - bsmu.vision.plugins.visualizers.image.flat.FlatImageVisualizerPlugin
+
+#  - bsmu.vision.plugins.undo.UndoPlugin
 
 #  - bsmu.vision.plugins.walkers.file.MdiImageLayerFileWalkerPlugin
 #  - bsmu.vision.plugins.tools.viewer.image.smart_brush.SmartBrushImageViewerToolPlugin
