--- a/biocell/src/bsmu/biocell/app/configs/BiocellApp.conf.yaml
+++ b/biocell/src/bsmu/biocell/app/configs/BiocellApp.conf.yaml
@@ -16,12 +16,12 @@ plugins:
 
   - bsmu.vision.plugins.post_load_converters.image_to_layered.ImageToLayeredImagePostLoadConverterPlugin
   - bsmu.vision.plugins.visualizers.image.layered.LayeredImageVisualizerPlugin
+  - bsmu.vision.plugins.visualizers.image.flat.FlatImageVisualizerPlugin
 
   - bsmu.vision.plugins.layer_controller.MdiImageViewerLayerControllerPlugin
   - bsmu.vision.plugins.layers_view.LayersTableViewPlugin
-  - bsmu.vision.plugins.visualizers.image.flat.FlatImageVisualizerPlugin
 
-#  - bsmu.vision.plugins.undo.UndoPlugin
+  - bsmu.vision.plugins.undo.UndoPlugin
 
 #  - bsmu.vision.plugins.walkers.file.MdiImageLayerFileWalkerPlugin
 #  - bsmu.vision.plugins.tools.viewer.image.smart_brush.SmartBrushImageViewerToolPlugin
