--- a/biocell/src/bsmu/biocell/app/configs/BiocellApp.conf.yaml
+++ b/biocell/src/bsmu/biocell/app/configs/BiocellApp.conf.yaml
@@ -20,6 +20,7 @@ plugins:
 
   - bsmu.vision.plugins.layer_controller.MdiImageViewerLayerControllerPlugin
   - bsmu.vision.plugins.layers_view.LayersTableViewPlugin
+  - bsmu.vision.plugins.task_storage_view.TaskStorageViewPlugin
 
   - bsmu.vision.plugins.undo.UndoPlugin
 
