--- a/environment.yaml
+++ b/environment.yaml
@@ -2,20 +2,20 @@ name: vision-py310
 channels:
   - defaults
 dependencies:
-  - bzip2=1.0.8
-  - ca-certificates=2024.3.11
-  - libffi=3.4.4
-  - openssl=3.0.13
-  - pip=24.0
-  - python=3.10.14
-  - setuptools=69.5.1
-  - sqlite=3.45.3
-  - tk=8.6.14
-  - vc=14.2
-  - vs2015_runtime=14.29.30133
-  - wheel=0.43.0
-  - xz=5.4.6
-  - zlib=1.2.13
+  - bzip2=1.0.8=h2bbff1b_6
+  - ca-certificates=2024.3.11=haa95532_0
+  - libffi=3.4.4=hd77b12b_1
+  - openssl=3.0.13=h2bbff1b_2
+  - pip=24.0=py310haa95532_0
+  - python=3.10.14=he1021f5_1
+  - setuptools=69.5.1=py310haa95532_0
+  - sqlite=3.45.3=h2bbff1b_0
+  - tk=8.6.14=h0416ee5_0
+  - vc=14.2=h2eaa2aa_1
+  - vs2015_runtime=14.29.30133=h43f2093_3
+  - wheel=0.43.0=py310haa95532_0
+  - xz=5.4.6=h8cc25b3_1
+  - zlib=1.2.13=h8cc25b3_1
   - pip:
       - colorama==0.4.6
       - coloredlogs==15.0.1
